force-app/main/default/objects/cgcloud__Unit_of_Measure__c/cgcloud__Unit_of_Measure__c.object-meta.xml
<CustomObject>
    <description>Holds the details od the units of measure (logistic unit) of a product.</description>
    <label>Unit of Measure</label>
    <nameField>
        <displayFormat>UoM-{00000}</displayFormat>
        <label>Unit of Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units of Measure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>