force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Check_isConsumer_Unique__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_isConsumer_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used internally for validation.</description>
    <label>is Consumer Unit</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>