force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__GTIN__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__GTIN__c</fullName>
    <description>Global trade item number.</description>
    <inlineHelpText>Global Trade Item Number</inlineHelpText>
    <label>GTIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>