force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Is_Consumer_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Consumer_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consumer unit.</description>
    <label>Is Consumer Unit</label>
    <type>Checkbox</type>
</CustomField>