force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Is_Order_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Order_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default order unit.</description>
    <inlineHelpText>Unit of Measure is default order unit.</inlineHelpText>
    <label>Is Order Unit</label>
    <type>Checkbox</type>
</CustomField>