force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Is_Price_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Price_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Price unit.</description>
    <inlineHelpText>Unit of Measure is default price unit.</inlineHelpText>
    <label>Is Price Unit</label>
    <type>Checkbox</type>
</CustomField>