force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Order_Ability__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Ability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Unit of Measure can be ordered.</description>
    <inlineHelpText>Unit of Measure is allowed for ordering.</inlineHelpText>
    <label>Order Ability</label>
    <type>Checkbox</type>
</CustomField>