force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Pieces_per_parent_unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pieces_per_parent_unit__c</fullName>
    <description>Number of pieces of this unit of measure are contained in the parent unit of measure.</description>
    <label>Pieces per Parent Unit</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>