force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Pieces_per_Smallest_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pieces_per_Smallest_Unit__c</fullName>
    <description>Number of pieces of smallest unit contained in this unit.</description>
    <label>Pieces per Smallest Unit</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>