force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Units of Measure</relationshipLabel>
    <relationshipName>Units_of_Measure</relationshipName>
    <type>Lookup</type>
</CustomField>