force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Rounding_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rounding_Rule__c</fullName>
    <description>Defines the rounding rule to be applied for the target unit of measure.</description>
    <label>Rounding Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
                <default>true</default>
                <label>Never</label>
            </value>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Nearest</fullName>
            </value>
            <value>
                <fullName>UserExit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>