force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Rounding_Target__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rounding_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the unit of measure is considered for rounding quantity.</description>
    <label>Rounding Target</label>
    <type>Checkbox</type>
</CustomField>