force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Sequence of unit of measures of a product (from smallest unit to largest unit).</description>
    <label>Sort</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>