force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Sort_Validation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort_Validation__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used internally for validation.</description>
    <label>Sort</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>