force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unit_Type__c</fullName>
    <description>Type of the unit of measure.</description>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SalesUnit</fullName>
                <default>true</default>
                <label>SalesUnit</label>
            </value>
            <value>
                <fullName>Layer</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>ConsumerUnit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>