force-app/main/default/objects/cgcloud__Unit_of_Measure__c/fields/cgcloud__Weight__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Weight__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Item weight used for complex pricing.</description>
    <label>Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>