force-app/main/default/objects/cgcloud__Unit_of_Measure__c/validationRules/cgcloud__Order_Ability_depend_on_IsOrderUnit_is_c.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Order_Ability_depend_on_IsOrderUnit_is_c</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Is_Order_Unit__c = true  &amp;&amp;  cgcloud__Order_Ability__c  &lt;&gt; true</errorConditionFormula>
    <errorDisplayField>cgcloud__Order_Ability__c</errorDisplayField>
    <errorMessage>Order Ability must be checked if the Is Order Unit is checked.</errorMessage>
</ValidationRule>